feat: Enhance feedback notifications with translation support and update language files

--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -71,6 +71,9 @@
         "feedbackSent": "Feedback erfolgreich gesendet",
         "sessionEnded": "Session erfolgreich beendet",
         "sessionNotFound": "Session nicht gefunden",
+        "sessionErrorCreating": "Fehler beim Erstellen der Session",
+        "noFeedbackSent": "Kein Feedback gesendet",
+        "feedbackSendedItems": "Feedback-Elemente eingereicht",
         "sessionCodeInvalid": "Ungültiger Session-Code",
         "feedbackNotFound": "Feedback nicht gefunden",
         "feedbackSentError": "Fehler beim Senden des Feedbacks",
