--- a/public/lang/en.json
+++ b/public/lang/en.json
@@ -73,6 +73,9 @@
         "sessionNotFound": "Session not found",
         "sessionCodeInvalid": "Invalid session code",
         "feedbackNotFound": "Feedback not found",
+        "sessionErrorCreating": "Failed to create session",
+        "feedbackSendedItems": "feedback items submitted",
+        "noFeedbackSent": "No feedback sent",
         "feedbackSentError": "Error sending feedback",
         "sessionEndedError": "Error ending session",
         "feedbackAdded": "Feedback added successfully",
